turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:1: error: not found: value setCouleurSol
  setCouleurSol(Color) = {
  ^LangtonsAnt:1: error: object java.awt.Color is not a value
  setCouleurSol(Color) = {
                ^LangtonsAnt:2: error: object java.awt.Color is not a value
    setCouleurBrosse(Color)
                     ^LangtonsAnt:3: error: not found: value baisseBosse
    baisseBosse()
    ^LangtonsAnt:7: error: not found: value setCouleurSol
  setCouleurSol(Color.Black)
  ^LangtonsAnt:7: error: value Black is not a member of object java.awt.Color
  setCouleurSol(Color.Black)
                      ^